--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = third-party/tpm
 	url = https://github.com/tmux-plugins/tpm
 	shallow = true
+[submodule "third-party/i3blocks"]
+	path = third-party/i3blocks
+	url = https://github.com/vivien/i3blocks
