--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,6 +12,7 @@
 [alias]
 	b = branch
 	c = commit
+	cam = commit -a -m
 	d = diff --ignore-space-at-eol
 	dc = diff --ignore-space-at-eol --cached
 	ignore = "!ignore() { curl -L -s https://www.gitignore.io/api/$@; }; ignore"
