fix i3 command: workspace previous --> prev
Former-commit-id: fac163527c0c008deb37f20bf30f780210e6cfd0
Former-commit-id: 454ecd9d5a0742ac235be1caa5f535a8c66d8c9e
Former-commit-id: 3442217b741cae48ab66f502a7b8818780339174
Former-commit-id: 70d20aa96f7a875421fc9d5df79e95d630dcd101
Former-commit-id: ce29fd2eeaba313e4513b70a5683c866fb2977e5 [formerly 2bb95c1fbf5a1317bb2c8fef10d4b20edbda80d7]
Former-commit-id: d07d92805a14360d2f6b1de01cb0bd5d4b8f024b

--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -117,8 +117,8 @@ bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
 # move to previous workspace
-bindsym $mod+Shift+Tab workspace previous
-bindsym $mod+Shift+n workspace previous
+bindsym $mod+Shift+Tab workspace prev
+bindsym $mod+Shift+n workspace prev
 
 # move to next workspace
 bindsym $mod+Tab workspace next
