add w for i3 tab
Former-commit-id: 71067d02e7f10d16023fdb180068f54c9a646f49
Former-commit-id: e94659eeca7185cd8241dd2c6ce9650b38104145
Former-commit-id: 206f0844a18de570cbc99fd5625859907fe0df26
Former-commit-id: c5be2857693c5ea6b1ff2b5c8f6e97525c865005
Former-commit-id: 4ea79b92802e5b3a9d1b54ac5bd1b8447706c2a6 [formerly bc297651b5a01d47d613dd2affa3b35290be4d85]
Former-commit-id: 94b077a33a3d09b108a2ac780106bf757ee8d386

--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -77,6 +77,7 @@ bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
 bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
 
