--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,21 +1,17 @@
-# prefix key {{{
-set -g prefix C-b
-# }}}
-
 # tweaks {{{
+set -g prefix C-b
 set -g set-titles on
 set -g base-index 1
 setw -g pane-base-index 1
 setw -g automatic-rename on
 setw -g mode-keys emacs
 
-# new windows/panes in $PWD
+# new windows / panes in $PWD
 bind c new-window -c "#{pane_current_path}"
 # }}}
 
 # mouse (tmux 2.1+) {{{
-# see 2.0 --> 2.1
-# https://raw.githubusercontent.com/tmux/tmux/master/CHANGES
+# see 2.0 --> 2.1: https://raw.githubusercontent.com/tmux/tmux/master/CHANGES
 set -g mouse on
 
 # make scrolling with wheels work
@@ -25,13 +21,13 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # appearance, colors and statusbar {{{
 set -g default-terminal "screen-256color"
-set -g status-bg colour234
-set -g status-fg colour226
 
 # statusbar
+set -g status-bg colour234
+set -g status-fg colour226
 set -g status-interval 10
 set -g status-right-length 60
-set -g status-right 'On-line: #{online_status} - #[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %d %b %R #{prefix_highlight}'
+set -g status-right 'On-line: #{online_status} - #[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %d %b %Y %R #{prefix_highlight}'
 # }}}
 
 # tmux plugin manager {{{
@@ -44,7 +40,6 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
