add fishy stuff
Former-commit-id: 16b33c14639a222df085ce7ef900c4f4a0ce136c
Former-commit-id: 3acb1982e9f74671e8aa7d07d5da16d7270e4960
Former-commit-id: d83f81ed42e651944abd139c5a614e77816ded0b
Former-commit-id: 1e03cce9ec7cfb2f7a09592c244ff4d37d3dd6ab
Former-commit-id: e43d76340781bef0720cc0288c7c03766c72bab1 [formerly c49776cc5f80ea91ef6eba03fa209fb6afc47626]
Former-commit-id: 17334648c3ae428c24c2e55607d2f2b598405854

--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,6 @@
 [submodule "third-party/i3blocks"]
 	path = i3/.i3blocks
 	url = https://github.com/vivien/i3blocks
+[submodule "fish/oh-my-fish"]
+	path = fish/.local/share/omf
+	url = https://github.com/oh-my-fish/oh-my-fish
