use PT Mono for Powerline font in i3
Former-commit-id: db1d5c7f5d18268dbf909783acaab4d94bc24234
Former-commit-id: 7a69519d4dd0e516fa010733c74df4fa9bf43228
Former-commit-id: b875a53286e63dab833d2049d7be224e15f38b10
Former-commit-id: 38a407346b98ff98499597a0996b14dc5a8cca56
Former-commit-id: 5c5fa0e82c1952757b48812a6b2682558f46516d [formerly d4b3944752bfd916b8486fc89ac47fa5d50cc708]
Former-commit-id: 0b0348334fbfbd948cc5c7b81fc80178340e43fa

--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -21,7 +21,7 @@ set $mod Mod1
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
 # font pango:DejaVu Sans Mono 10
-font pango:Droid Sans 10
+font pango:PT Mono for Powerline 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
