git: add more aliases
Former-commit-id: 46dc1315790b4115a299cb6b5161f4787a87e53b
Former-commit-id: 11e6345c2a57efddab69e0c4947c30f6beb8feb1
Former-commit-id: 76fbd2341feded968db6a8b0f4d4c86cfc33691d
Former-commit-id: 166f36b6d6eac872df03a612b3117fa8940fd7f3
Former-commit-id: 1ba466600c30b3b090a0f55e7d3573313d7449a9 [formerly 209e16020ab2eb98d268ed75572841df233eefcc]
Former-commit-id: 59073b3016eff96ec1d9fde6fd8b698a2cf51414

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,6 +12,7 @@
 [alias]
 	b = branch
 	c = commit
+	cm = commit -m
 	cam = commit -a -m
 	d = diff --ignore-space-at-eol
 	dc = diff --ignore-space-at-eol --cached
@@ -22,6 +23,8 @@
 	prune = fetch --prune
 	st = status
 	stash-all = stash save --include-untracked
+	submodule-sync = submodule update --init --recursive
+	submodule-update = submodule update --remote --recursive
 	undo = reset --soft HEAD^
 	world = "!world() { git gc; git remote prune origin; }; world"
 
