--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,22 +27,20 @@ set -g status-bg colour234
 set -g status-fg colour226
 set -g status-interval 10
 set -g status-right-length 60
-set -g status-right 'On-line: #{online_status} - #[fg=yellow]#(curl ipecho.net/plain;echo) - #[fg=white]%a %d %b %Y %R #{prefix_highlight}'
+set -g status-right 'On-line: #{online_status} - #[fg=white]%a %d %b %Y %R #{prefix_highlight}'
 # }}}
 
 # tmux plugin manager {{{
 # List of tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 # }}}
 
