--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -159,8 +159,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Start i3bar to display a workspace bar plus system information
 bar {
         status_command ~/.i3blocks/i3blocks
         # status_command i3status
@@ -170,3 +169,10 @@ bar {
 }
 
 workspace_auto_back_and_forth yes
+
+# autostart applications {{{
+exec --no-startup-id i3-sensible-terminal
+
+# system tray apps
+exec --no-startup-id nm-applet
+# }}}
