--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 # tweaks {{{
 set -g prefix C-b
+set -g default-terminal "screen-256color"
 set -g set-titles on
 set -g base-index 1
 setw -g pane-base-index 1
@@ -19,15 +20,45 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 # }}}
 
-# appearance, colors and statusbar {{{
-set -g default-terminal "screen-256color"
+# design and statusbar {{{
+setw -g clock-mode-colour colour135
+setw -g mode-attr bold
+setw -g mode-fg colour196
+setw -g mode-bg colour238
 
-# statusbar
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
+
+set -g status-attr dim
 set -g status-bg colour234
-set -g status-fg colour226
+set -g status-fg colour137
 set -g status-interval 10
+set -g status-justify left
+set -g status-left '#{prefix_highlight}'
+set -g status-left-length 20
+set -g status-position bottom
+set -g status-right 'On-line: #{online_status} #[fg=colour233,bg=colour241,bold] %a %d %b %Y #[fg=colour233,bg=colour245,bold] %R #{prefix_highlight}'
 set -g status-right-length 60
-set -g status-right 'On-line: #{online_status} - #[fg=white]%a %d %b %Y %R #{prefix_highlight}'
+
+setw -g window-status-attr none
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-bg colour1
+setw -g window-status-bell-fg colour255
+setw -g window-status-bg colour235
+setw -g window-status-current-attr bold
+setw -g window-status-current-bg colour238
+setw -g window-status-current-fg colour81
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-fg colour138
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+set -g message-attr bold
+set -g message-bg colour166
+set -g message-command-bg black
+set -g message-command-fg blue
+set -g message-fg colour232
 # }}}
 
 # tmux plugin manager {{{
