--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,14 +11,8 @@ setw -g mode-keys emacs
 bind c new-window -c "#{pane_current_path}"
 # }}}
 
-# mouse (tmux 2.1+) {{{
-# see 2.0 --> 2.1: https://raw.githubusercontent.com/tmux/tmux/master/CHANGES
-set -g mouse on
-
-# make scrolling with wheels work
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-# }}}
+# set configs depending on the tmux version
+run-shell "sh ~/.tmux/tmux.version.sh"
 
 # design and statusbar {{{
 setw -g clock-mode-colour colour135
