--- a/tmux/.tmux/tmux_2.1_down.conf
+++ b/tmux/.tmux/tmux_2.1_down.conf
@@ -2,4 +2,4 @@
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
-set -g mouse-select-window on'
+# set -g mouse-select-window on'
