remove tmux online status
Former-commit-id: c4dd57ea66096a3488da1568edc25c8c12323e92
Former-commit-id: 85c35173ca0376fccf76a66ea452d943cdba8932
Former-commit-id: 31c908ed1fc0084edbce8c07f2fd014adbf79ab6
Former-commit-id: fbc8ef053fa657343eb11c037f1c3aa562ca0e8b
Former-commit-id: b4097b83cd23bda07cf96eef9ba0f293cf98f84f [formerly 3075838518163e24d1704f23ae2ccf796e8632d3]
Former-commit-id: 82e7faec95af5ba321367ca48f71a6fb89c1282e

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,7 +33,7 @@ set -g status-justify left
 set -g status-left '#{prefix_highlight}'
 set -g status-left-length 20
 set -g status-position bottom
-set -g status-right 'On-line: #{online_status} #[fg=colour233,bg=colour241,bold] %a %d %b %Y #[fg=colour233,bg=colour245,bold] %R #{prefix_highlight}'
+set -g status-right '#[fg=colour233,bg=colour241,bold] %a %d %b %Y #[fg=colour233,bg=colour245,bold] %R #{prefix_highlight}'
 set -g status-right-length 60
 
 setw -g window-status-attr none
@@ -59,7 +59,6 @@ set -g message-fg colour232
 # List of tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
