add i3 media keys and re-add git repo
Former-commit-id: d4a5b22db868bc3c5d46df1cc295ca4ec68e7a19
Former-commit-id: 54f74532ef43dbefe45314c6d7c47d600b916a77
Former-commit-id: aa72d33dd1d0e5e26d8d5c8d5f81e5be606dc677
Former-commit-id: 364d5a6873bd9fda4313b6e39696f29355f367b5
Former-commit-id: 9c55f57f55663a80320b37ac18c580904a72ca1a [formerly 064b8cea7200b203a00769fe932ba2e17c163856]
Former-commit-id: 7770743639fa7e032eedbd86d3369b3ae5021bbe

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "third-party/git"]
-	path = git/.git
-	url = https://github.com/git/git
-	shallow = true
 [submodule "third-party/zsh-completions"]
 	path = zsh/.zsh-completions
 	url = https://github.com/zsh-users/zsh-completions
@@ -24,3 +20,6 @@
 [submodule "fish/oh-my-fish"]
 	path = fish/.local/share/omf
 	url = https://github.com/oh-my-fish/oh-my-fish
+[submodule "git/.gitgit"]
+	path = git/.gitgit
+	url = https://github.com/git/git
