--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -102,7 +102,7 @@ bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
+bindsym $mod+9 workspace 9:spotify
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
@@ -114,15 +114,15 @@ bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+9 move container to workspace 9:spotify
 bindsym $mod+Shift+0 move container to workspace 10
 
 # move to previous workspace
-bindsym $mod+Shift+Tab workspace prev
+bindsym $mod+Shift+Tab workspace back_and_forth
 bindsym $mod+Shift+n workspace prev
 
 # move to next workspace
-bindsym $mod+Tab workspace next
+bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+n workspace next
 
 # reload the configuration file
@@ -181,4 +181,3 @@ exec --no-startup-id i3-sensible-terminal
 
 # system tray apps
 exec --no-startup-id nm-applet
-# }}}
