--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -117,6 +117,11 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9:spotify
 bindsym $mod+Shift+0 move container to workspace 10
 
+# assign [class=""] workspace 1
+# for_window [class=""] move to workspace 1
+#
+for_window [window_role="pop-up"] floating enable
+
 # move to previous workspace
 bindsym $mod+Shift+Tab workspace back_and_forth
 bindsym $mod+Shift+n workspace prev
