--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ bind c new-window -c "#{pane_current_path}"
 # }}}
 
 # set configs depending on the tmux version
-run-shell "sh ~/.tmux/tmux.version.sh"
+run-shell "~/.tmux/tmux.version.sh"
 
 # design and statusbar {{{
 setw -g clock-mode-colour colour135
