--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,6 +59,7 @@ set -g message-fg colour232
 # List of tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
 
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
