--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,3 @@
-[submodule "third-party/zsh-completions"]
-	path = zsh/.zsh-completions
-	url = https://github.com/zsh-users/zsh-completions
-	shallow = true
-[submodule "third-party/zsh-syntax-highlighting"]
-	path = zsh/.zsh-syntax-highlighting
-	url = https://github.com/zsh-users/zsh-syntax-highlighting
-	shallow = true
-[submodule "third-party/grml-etc-core"]
-	path = zsh/.grml-etc-core
-	url = git://git.grml.org/grml-etc-core.git
-	shallow = true
 [submodule "third-party/tpm"]
 	path = tmux/.tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
@@ -23,3 +11,6 @@
 [submodule "git/.gitgit"]
 	path = git/.gitgit
 	url = https://github.com/git/git
+[submodule "zsh/.zplug"]
+	path = zsh/.zplug
+	url = https://github.com/zplug/zplug
