remove autojump and improve zsh
Former-commit-id: 45e87dc3ee28f8691f0ed57af22a99c8756a49cf
Former-commit-id: 9901f8bc80831805bc2f0a9188a67e87c0ffb7c2
Former-commit-id: eff1dc2e3555a66d8229e25d34f87df54c8fa97f
Former-commit-id: 5a8f46df89c5cbfc03b4a29b37880948a363ef8e
Former-commit-id: 17b8f071d6f33db561a9dbb788b7f00c04dc0333 [formerly 2531883b86353e443f7e2e7c58091cd07dfb34cc]
Former-commit-id: 0a0d941fbefe0a7742332bc5600fb5f286bdae2c

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "third-party/tpm"]
+[submodule "tmux/.tmux/plugins/tpm"]
 	path = tmux/.tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
 	shallow = true
-[submodule "third-party/i3blocks"]
+[submodule "i3/.i3blocks"]
 	path = i3/.i3blocks
 	url = https://github.com/vivien/i3blocks
 [submodule "git/.gitgit"]
@@ -11,3 +11,4 @@
 [submodule "zsh/.zplug"]
 	path = zsh/.zplug
 	url = https://github.com/zplug/zplug
+	ignore = dirty
