--- a/gnupg/.gnupg/gpg-agent.conf
+++ b/gnupg/.gnupg/gpg-agent.conf
@@ -1,5 +1,6 @@
-# HomeBrew pinentry-mac
+# HomeBrew
 pinentry-program /usr/local/bin/pinentry-mac
+use-standard-socket
 
-# MacPorts pinentry-mac
+# MacPorts
 # pinentry-program /Applications/MacPorts/pinentry-mac.app/Contents/MacOS/pinentry-mac
