--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,10 +30,10 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-interval 10
 set -g status-justify left
-set -g status-left '#{prefix_highlight}'
+set -g status-left ''
 set -g status-left-length 20
 set -g status-position bottom
-set -g status-right '#[fg=colour233,bg=colour241,bold] %a %d %b %Y #[fg=colour233,bg=colour245,bold] %R #{prefix_highlight}'
+set -g status-right '#{prefix_highlight}'
 set -g status-right-length 60
 
 setw -g window-status-attr none
@@ -62,7 +62,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
