remove vimpager alias
Former-commit-id: 07b7a2c8b367d32a16c28c95d449aefadae3b68d
Former-commit-id: 36479dd162114a5c6ded46520f0243a5916eab75
Former-commit-id: bf970b2de8f9ca2f8bc67c9bacf1ff7cc3ce35f1
Former-commit-id: 348cc033f72340989da03806fcf3579a5f6e6685
Former-commit-id: a73749789fdc62b35c5327c604bc2ac0426d684e [formerly 0e2891011b94ba5086c6f91df707496c4e1d992a]
Former-commit-id: 246ea87551d4920618096537a30c22a8b8709857

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -45,6 +45,7 @@
 [merge]
 	tool = vimdiff
 	conflictstyle = diff3
+	ff = false
 
 [mergetool]
 	prompt = true
@@ -83,3 +84,6 @@
 
 [status]
 	showUntrackedFiles = all
+
+[pull]
+	ff = only
