add cane to git; update brewfile
Former-commit-id: 6936697e977fbf8fd6cb20af834cefdc43859f2b
Former-commit-id: 25315a589965cd8a5aa16c03de6909591fb7c811
Former-commit-id: cfce2995769b333d37cfdeca98b3db4c510430a2
Former-commit-id: 0472d75f20a7e21ef23aabddef7949b32645a507
Former-commit-id: b35f567468981c83c2e61655c9e149953f4e1080 [formerly a467cb2a1d32702d92710be11ec0dc65021f40ca]
Former-commit-id: 980763ab4b39d6c62a8b9cc656a81a1b94a2a226

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,6 +14,7 @@
 	c = commit
 	cm = commit -m
 	cam = commit -a -m
+	cane = commit --amend --no-edit
 	d = diff --ignore-space-at-eol
 	dc = diff --ignore-space-at-eol --cached
 	ignore = "!ignore() { curl -L -s https://www.gitignore.io/api/$@; }; ignore"
