--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,10 +9,10 @@ setw -g mode-keys emacs
 
 # new windows / panes in $PWD
 bind c new-window -c "#{pane_current_path}"
-# }}}
 
 # set configs depending on the tmux version
 run-shell "~/.tmux/tmux.version.sh"
+# }}}
 
 # design and statusbar {{{
 setw -g clock-mode-colour colour135
@@ -58,13 +58,13 @@ set -g message-fg colour232
 # tmux plugin manager {{{
 # List of tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+# initialize tmux plugin manager (keep it at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 # }}}
 
