--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,7 +3,7 @@
 	email = tbperrotta@gmail.com
 
 [credential]
-	helper = store
+	helper = cache
 
 [push]
 	default = simple
@@ -17,6 +17,7 @@
 	cane = commit --amend --no-edit
 	d = diff --ignore-space-at-eol
 	dc = diff --ignore-space-at-eol --cached
+	emerge = "!emerge() { git pull origin && git push origin; }; emerge"
 	ignore = "!ignore() { curl -L -s https://www.gitignore.io/api/$@; }; ignore"
 	l = log
 	logg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
