--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,3 @@
-# tweaks {{{
 set -g prefix C-b
 set -g default-terminal "screen-256color"
 set -g set-titles on
@@ -6,13 +5,10 @@ set -g base-index 1
 setw -g pane-base-index 1
 setw -g automatic-rename on
 setw -g mode-keys emacs
-
-# new windows / panes in $PWD
 bind c new-window -c "#{pane_current_path}"
-
-# set configs depending on the tmux version
-run-shell "~/.tmux/tmux.version.sh"
-# }}}
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # design and statusbar {{{
 setw -g clock-mode-colour colour135
@@ -56,10 +52,8 @@ set -g message-fg colour232
 # }}}
 
 # tmux plugin manager {{{
-# List of tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
