--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,62 +1,22 @@
 set -g prefix C-b
-set -g default-terminal "screen-256color"
 set -g set-titles on
+set -g mouse on
 set -g base-index 1
 setw -g pane-base-index 1
 setw -g automatic-rename on
 setw -g mode-keys emacs
 bind c new-window -c "#{pane_current_path}"
-set -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-# design and statusbar {{{
-setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
-
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
-
-set -g status-attr dim
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-interval 10
-set -g status-justify left
-set -g status-left ''
-set -g status-left-length 20
-set -g status-position bottom
-set -g status-right '#{prefix_highlight}'
-set -g status-right-length 60
-
-setw -g window-status-attr none
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-bg colour1
-setw -g window-status-bell-fg colour255
-setw -g window-status-bg colour235
-setw -g window-status-current-attr bold
-setw -g window-status-current-bg colour238
-setw -g window-status-current-fg colour81
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-setw -g window-status-fg colour138
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-set -g message-attr bold
-set -g message-bg colour166
-set -g message-command-bg black
-set -g message-command-fg blue
-set -g message-fg colour232
-# }}}
-
-# tmux plugin manager {{{
+# tmux-plugin-manager {{{
+# C-b I to install the plugins
+# C-b R to reload .tmux.conf
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/block/yellow'
 
 # initialize tmux plugin manager (keep it at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
