--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -181,8 +181,5 @@ bar {
 
 workspace_auto_back_and_forth yes
 
-# autostart applications {{{
-
-# system tray apps
-exec --no-startup-id nm-applet
-exec --no-startup-id clipit
+# autostart applications
+# exec --no-startup-id <program>
