--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,7 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 set -g @plugin 'jimeh/tmux-themepack'
-set -g @themepack 'powerline/block/yellow'
+set -g @themepack 'powerline/block/blue'
 
 # initialize tmux plugin manager (keep it at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
