--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,16 +7,16 @@ setw -g automatic-rename on
 setw -g mode-keys emacs
 bind c new-window -c "#{pane_current_path}"
 
+# C-b I to install, C-b R to reload
 # tmux-plugin-manager {{{
-# C-b I to install the plugins
-# C-b R to reload .tmux.conf
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/block/blue'
+
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # initialize tmux plugin manager (keep it at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
