--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -15,6 +15,7 @@
 
 [alias]
 	dc = diff --cached
+	ls = log --pretty=format:'%C(yellow)%h%C(white) %an <%ae> %>|(80)%ai%Creset%n%C(bold)%w(0,4,4)%s%C(reset)%n%+b'
 	st = status
 	xl = log --graph --decorate --all # [--oneline]
 
