--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ set-window-option -g status-left " #S "
 set-window-option -g status-left-fg black
 set-window-option -g status-left-bg white
 
-set-window-option -g status-right "#H"
+set-window-option -g status-right "#{prefix_highlight}#H"
 set-window-option -g status-right-fg black
 set-window-option -g status-right-bg white
 
@@ -28,8 +28,9 @@ set-window-option -g window-status-current-bg black
 # C-b I to install, C-b R to reload
 # tmux-plugin-manager {{{
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # initialize tmux plugin manager (keep it at the very bottom of tmux.conf)
