--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 	path = i3/.i3blocks
 	url = https://github.com/vivien/i3blocks
 	shallow = true
+[submodule "vim/.vim/vim-plug"]
+	path = vim/.vim/vim-plug
+	url = https://github.com/junegunn/vim-plug
