--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,6 +14,7 @@
 	followTags = true
 
 [alias]
+	cp = cherry-pick
 	dc = diff --cached
 	ls = log --pretty=format:'%C(yellow)%h%C(white) %an <%ae> %>|(80)%ai%Creset%n%C(bold)%w(0,4,4)%s%C(reset)%n%+b'
 	st = status
