--- a/hg/.hgrc
+++ b/hg/.hgrc
@@ -11,4 +11,11 @@ progress=
 cmd.vimdiff = vimdiff
 cmd.meld = meld
 
+[ui]
+merge = vimdiff
+
+[merge-tools]
+vimdiff.executable = vim
+vimdiff.args = -d -c "wincmd J" "$output" "$local" "$other" "$base"
+
 %include ~/.hgrc_corp
