--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,7 +15,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -162,11 +162,10 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3blocks
+        status_command i3status
         position top
 }
 
-# custom settings {{{
 # move to previous workspace
 bindsym $mod+Shift+Tab workspace back_and_forth
 bindsym $mod+Shift+n workspace prev
@@ -175,15 +174,9 @@ bindsym $mod+Shift+n workspace prev
 bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+n workspace next
 
+# float pop-up windows
 for_window [window_role="pop-up"] floating enable
 
 workspace_auto_back_and_forth yes
-
-# assign [class=""] workspace 1
-# for_window [class=""] move to workspace 1
-
-# autostart applications
-# exec --no-startup-id <program>
-# }}}
 
 # vim: fdm=marker
