--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -174,6 +174,9 @@ bindsym $mod+Shift+n workspace prev
 bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+n workspace next
 
+# lock screen
+bindsym Ctrl+Mod1+l exec i3lock --color=cccccc
+
 # float pop-up windows
 for_window [window_role="pop-up"] floating enable
 for_window [class="^Google-chrome$"] border none
