--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -34,6 +34,7 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+Return exec i3-sensible-terminal
+bindsym Ctrl+Mod1+t exec i3-sensible-terminal
 
 # kill focused window
 # bindsym $mod+Shift+q kill
