--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,7 +15,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+font pango:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -180,7 +180,10 @@ bindsym Ctrl+Mod1+l exec i3lock --color=cccccc
 
 # float pop-up windows
 for_window [window_role="pop-up"] floating enable
+
+# no border
 for_window [class="^Google-chrome$"] border none
+for_window [class="^Gnome-terminal$"] border none
 
 workspace_auto_back_and_forth yes
 
