add rofi and cinnamon-screensaver-command
Former-commit-id: 6d2ea7f9435ecacd2d6eb8c84c5ea31a166cd2f6
Former-commit-id: 6571b7f2930318b0ca70750f961e91492ef20118
Former-commit-id: 2362dbb65077cfd49a679854b3853c86631f7c31
Former-commit-id: e493c26d3ac40919266c5b752679ce62a37933a6
Former-commit-id: 7b7202c273716911676d3ea4d2de9b3daae957c1 [formerly b97f0ab9dba59021efe9c612840cd960d9a71948]
Former-commit-id: eac3eb7467d78f7afd8c4d02c2f24f17fb1823b9

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -41,14 +41,14 @@ bindsym Ctrl+Mod1+t exec i3-sensible-terminal
 bindsym $mod+Shift+c kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-bindsym $mod+p exec dmenu_run
+bindsym $mod+d exec hash rofi &>/dev/null && rofi -show run || dmenu_run
+bindsym $mod+p exec hash rofi &>/dev/null && rofi -show run || dmenu_run
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+Shift+p exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+Shift+d exec hash rofi &>/dev/null && rofi -show drun || i3-dmenu-desktop
+bindsym $mod+Shift+p exec hash rofi &>/dev/null && rofi -show drun || i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -176,7 +176,7 @@ bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+n workspace next
 
 # lock screen
-bindsym Ctrl+Mod1+l exec i3lock --color=cccccc
+bindsym Ctrl+Mod1+l exec hash cinnamon-screensaver-command && cinnamon-screensaver-command --lock || i3lock
 
 # float pop-up windows
 for_window [window_role="pop-up"] floating enable
