--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -1,21 +1,16 @@
 general {
 	colors = true
-	interval = 5
+	interval = 10
 }
 
 order += "ethernet eth0"
-order += "load"
 order += "tztime local"
 
 ethernet eth0 {
-	format_up = "E: %ip (%speed)"
+	format_up = "E: up"
 	format_down = "E: down"
 }
 
-load {
-	format = "%5min"
-}
-
 tztime local {
-	format = "%Y-%m-%d %H:%M:%S"
+	format = "%Y-%m-%d %H:%M"
 }
