no border for zathura windows
Former-commit-id: 79d15dbce0b5eb03efe6cff6eb8b00825801650d
Former-commit-id: 5700df86ab29ca88d5f53b8c5ee26d1947832d06
Former-commit-id: 97ada64241731ce0202cdf9797af528e8a0b06d8
Former-commit-id: 1bf9f95afe5dab3dc0fb812c5bb15db1f45bfb3c
Former-commit-id: 87d90943795c627e66a9523b4753b0156adccbc0 [formerly e643442c940d8f1252a4269c9de64b9512260597]
Former-commit-id: 67c67322a7644ff019edf2ed57b3df25ab32e5d0

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -189,6 +189,7 @@ for_window [window_role="pop-up"] floating disable
 
 # no border
 for_window [class="^Google-chrome$"] border none
+for_window [class="^Zathura$"] border none
 for_window [class="^Gnome-terminal$|^Terminator$"] border none
 
 # i3 settings
