--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -105,29 +105,41 @@ bindsym $mod+a focus parent
 # focus the child container
 bindsym $mod+b focus child
 
+# workspace names
+set $workspace1 "1:I"
+set $workspace2 "2:II"
+set $workspace3 "3:III"
+set $workspace4 "4:IV"
+set $workspace5 "5:V"
+set $workspace6 "6:VI"
+set $workspace7 "7:VVI"
+set $workspace8 "8:VIII"
+set $workspace9 "9:IX"
+set $workspace10 "10:X"
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace $workspace1
+bindsym $mod+2 workspace $workspace2
+bindsym $mod+3 workspace $workspace3
+bindsym $mod+4 workspace $workspace4
+bindsym $mod+5 workspace $workspace5
+bindsym $mod+6 workspace $workspace6
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
+bindsym $mod+9 workspace $workspace9
+bindsym $mod+0 workspace $workspace10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace $workspace1
+bindsym $mod+Shift+2 move container to workspace $workspace2
+bindsym $mod+Shift+3 move container to workspace $workspace3
+bindsym $mod+Shift+4 move container to workspace $workspace4
+bindsym $mod+Shift+5 move container to workspace $workspace5
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
+bindsym $mod+Shift+9 move container to workspace $workspace9
+bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # reload the configuration file
 # bindsym $mod+Shift+c reload
@@ -141,6 +153,7 @@ bindsym $mod+Shift+q exec $i3exit
 bindsym $mod+Shift+e exec $i3exit
 
 # resize window (you can also use the mouse for that)
+set $step 10
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
@@ -148,16 +161,16 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width $step px or $step ppt
+        bindsym j resize grow height $step px or $step ppt
+        bindsym k resize shrink height $step px or $step ppt
+        bindsym l resize grow width $step px or $step ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym Left resize shrink width $step px or $step ppt
+        bindsym Down resize grow height $step px or $step ppt
+        bindsym Up resize shrink height $step px or $step ppt
+        bindsym Right resize grow width $step px or $step ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -171,6 +184,7 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
         position top
+        strip_workspace_numbers yes
 }
 
 # move to previous workspace
