--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -202,9 +202,9 @@ bindsym Ctrl+$Alt+l exec hash cinnamon-screensaver-command && cinnamon-screensav
 for_window [window_role="pop-up"] floating disable
 
 # no border
+for_window [class="^Gnome-terminal$"] border none
 for_window [class="^Google-chrome$"] border none
 for_window [class="^Zathura$"] border none
-for_window [class="^Gnome-terminal$|^Terminator$"] border none
 
 # i3 settings
 workspace_auto_back_and_forth yes
