--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -209,4 +209,7 @@ for_window [class="^Zathura$"] border none
 # i3 settings
 workspace_auto_back_and_forth yes
 
+# autostart programs
+exec hash dex && dex --autostart --environment CINNAMON
+
 # vim: fdm=marker
