--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,14 +13,14 @@ set-window-option -g status-left-fg black
 set-window-option -g status-left-bg white
 
 set-window-option -g status-right "#{prefix_highlight}#H"
-set-window-option -g status-right-fg black
-set-window-option -g status-right-bg white
+set-window-option -g status-right-fg white
+set-window-option -g status-right-bg black
 
-set-window-option -g status-bg colour240
 set-window-option -g status-fg white
+set-window-option -g status-bg black
 set-window-option -g window-status-format " #I:#W"
 
-set-window-option -g window-status-current-format " #I:#W "
+set-window-option -g window-status-current-format " #I:#W"
 set-window-option -g window-status-current-fg colour220
 set-window-option -g window-status-current-bg black
 # }}}
