--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -44,16 +44,16 @@ bindsym Ctrl+$Alt+t exec i3-sensible-terminal
 bindsym $mod+Shift+c kill
 
 # start dmenu (a program launcher)
-set $i3rofi_run "exec hash rofi &>/dev/null && rofi -show run || dmenu_run"
-bindsym $mod+d $i3rofi_run
-bindsym $mod+p $i3rofi_run
+set $i3binlaunch "exec hash rofi &>/dev/null && rofi -show run || dmenu_run"
+bindsym $mod+d $i3binlaunch
+bindsym $mod+p $i3binlaunch
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-set $i3rofi_desktop "exec hash rofi &>/dev/null && rofi -show drun || i3-dmenu-desktop"
-bindsym $mod+Shift+d $i3rofi_desktop
-bindsym $mod+Shift+p $i3rofi_desktop
+set $i3desktoplaunch "exec hash rofi &>/dev/null && rofi -show drun || i3-dmenu-desktop"
+bindsym $mod+Shift+d $i3desktoplaunch
+bindsym $mod+Shift+p $i3desktoplaunch
 
 # change focus
 bindsym $mod+h focus left
@@ -198,7 +198,7 @@ bindsym $mod+n workspace next
 # lock screen
 bindsym Ctrl+$Alt+l exec hash cinnamon-screensaver-command && cinnamon-screensaver-command --lock || i3lock
 
-# float pop-up windows
+# floating behavior for pop-up windows
 for_window [window_role="pop-up"] floating disable
 
 # no border
@@ -211,5 +211,7 @@ workspace_auto_back_and_forth yes
 
 # autostart programs
 exec hash dex && dex --autostart --environment CINNAMON
+exec cinnamon-screensaver
+exec xautolock -detectsleep -time 10 -locker "cinnamon-screensaver-command --lock" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
 
 # vim: fdm=marker
