--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,5 @@
 set -g prefix C-b
+set -g prefix2 C-z
 set -g set-titles on
 set -g mouse on
 set -g base-index 1
@@ -8,9 +9,9 @@ setw -g mode-keys emacs
 bind c new-window -c "#{pane_current_path}"
 
 # status bar {{{
-set-window-option -g status-left " #S "
-set-window-option -g status-left-fg black
-set-window-option -g status-left-bg white
+set-window-option -g window-status-current-format "#I:#W"
+set-window-option -g window-status-current-fg colour220
+set-window-option -g window-status-current-bg black
 
 set-window-option -g status-right "#{prefix_highlight}#H"
 set-window-option -g status-right-fg white
@@ -18,11 +19,8 @@ set-window-option -g status-right-bg black
 
 set-window-option -g status-fg white
 set-window-option -g status-bg black
-set-window-option -g window-status-format " #I:#W"
+set-window-option -g window-status-format "#I:#W"
 
-set-window-option -g window-status-current-format " #I:#W"
-set-window-option -g window-status-current-fg colour220
-set-window-option -g window-status-current-bg black
 # }}}
 
 # C-b I to install, C-b R to reload
